hphp/hack/test/sound_dynamic/parsing/class_extends_dynamic.bad.php.exp
File "class_extends_dynamic.bad.php", line 6, characters 17-23:
Unbound name: `dynamic` (an object type) (Naming[2049])
