hphp/hack/test/sound_dynamic/parsing/class_extends_dynamic.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

// A class cannot extend dynamic (implement is the right keyword)

class D extends dynamic {}
